# LearningOpenCV

./: .gitignore  README.md
01_IntroductionToOpenCV/: README.md
01_IntroductionToOpenCV/01_LoadAndDisplayImage/: 01_LoadAndDisplayImage.cpp  CMakeLists.txt
01_IntroductionToOpenCV/02_LoadModifyAndSaveImage/: README.md
01_LoadAndDisplayImage/: 01_LoadAndDisplayImage  README.md
02_CoreFunctionality/: README.md
02_CoreFunctionality/01_MatBasicImageContainer/: 01_MatBasicImageContainer.cpp  CMakeLists.txt  README.md
02_CoreFunctionality/02_HowToScanImages/: 02_HowToScanImages.cpp  CMakeLists.txt  README.md
02_CoreFunctionality/03_MaskOperations/: 03_MaskOperations.cpp  CMakeLists.txt  README.md
02_CoreFunctionality/04_OperationsWithImages/: 04_OperationsWithImages.cpp  CMakeLists.txt  README.md
02_CoreFunctionality/05_AddingTwoImages/: 05_AddingTwoImages.cpp  CMakeLists.txt  README.md
02_CoreFunctionality/06_ChangingContrastAndBrightness/: 06_ChangingContrastAndBrightness.cpp  06_ChangingContrastAndBrigthness.cpp  CMakeLists.txt  README.md
02_LoadModifyAndSaveImage/: 02_LoadModifyAndSaveImage  02_LoadModifyAndSaveImage.cpp  CMakeLists.txt
04_HighLevelGui/: README.md
04_HighLevelGui/01_AddingTrackbar/: 01_AddingTrackbar.cpp  CMakeLists.txt  README.md
04_HighLevelGui/02_ChangingContrastAndBrightness/: 02_ChangingContrastAndBrightness.cpp  CMakeLists.txt  README.md
