cmake_minimum_required (VERSION 2.6)
project (02_ChangingContrastAndBrightness)
find_package (OpenCV REQUIRED)
include_directories (${OpenCV_INCLUDE_DIRS})
add_executable (02_ChangingContrastAndBrightness 02_ChangingContrastAndBrightness.cpp)
target_link_libraries (02_ChangingContrastAndBrightness ${OpenCV_LIBS})
